--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Image Search</title>
 
+  <link rel="stylesheet" href="./css/styles.css">
+</head>
 
-    <script type="module" src="./main.js"></script>
-  </body>
+<body>
+  <header>
+    <form id="search-form" class="search-form">
+      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+      <button type="submit">Search</button>
+    </form>
+  </header>
+  <main>
+    <div class="gallery"></div>
+    <button class="load-more hidden">Load more</button>
+    <div class="loader">Loading...</div>
+  </main>
+  <script type="module" src="./main.js"></script>
+</body>
+
 </html>
