--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   </header>
   <main>
     <div class="gallery"></div>
+    <div class="load-more-container">
     <button class="load-more hidden">Load more</button>
     <div class="loader">Loading...</div>
   </main>
